# RVProspector

./: .gitignore  README.md  gui_entry.py  pyproject.toml
.github/workflows/: macos-build.yml  windows-build.yml
src/rvprospector/: cli.py  core.py  ui.py
web/: app.py  db.py  lead_sync.py  requirements.txt
